WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55854
[Chromium] missing HTMLInputElement::setValueForUser() to tests
https://bugs.webkit.org/show_bug.cgi?id=55854
Summary
[Chromium] missing HTMLInputElement::setValueForUser() to tests
Fumitoshi Ukai
Reported
2011-03-06 18:17:16 PST
HTMLInputElement::setValueForUser() was added at
http://trac.webkit.org/changeset/80412
We need this for chromium to pass fast/forms/onchange-setvalueforuser.html
Attachments
Patch
(5.67 KB, patch)
2011-03-08 23:25 PST
,
Ilya Sherman
no flags
Details
Formatted Diff
Diff
Patch
(5.72 KB, patch)
2011-03-08 23:57 PST
,
Ilya Sherman
no flags
Details
Formatted Diff
Diff
Patch
(5.78 KB, patch)
2011-03-10 20:45 PST
,
Ilya Sherman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ilya Sherman
Comment 1
2011-03-08 23:25:08 PST
Created
attachment 85135
[details]
Patch
Fumitoshi Ukai
Comment 2
2011-03-08 23:42:05 PST
Comment on
attachment 85135
[details]
Patch LGTM
Kent Tamura
Comment 3
2011-03-08 23:43:30 PST
Comment on
attachment 85135
[details]
Patch Looks ok. But the patch will conflict?
WebKit Commit Bot
Comment 4
2011-03-08 23:50:34 PST
Comment on
attachment 85135
[details]
Patch Rejecting
attachment 85135
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'apply-..." exit_code: 2 Last 500 characters of output: atform/chromium/test_expectations.txt Hunk #1 FAILED at 3308. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/test_expectations.txt.rej patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/chromium/LayoutTestController.cpp patching file Tools/DumpRenderTree/chromium/LayoutTestController.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Kent Tamura', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/8116267
Ilya Sherman
Comment 5
2011-03-08 23:57:50 PST
Created
attachment 85137
[details]
Patch
WebKit Commit Bot
Comment 6
2011-03-10 16:17:52 PST
Comment on
attachment 85137
[details]
Patch Rejecting
attachment 85137
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'ap..." exit_code: 2 Last 500 characters of output: ests/platform/chromium/test_expectations.txt Hunk #1 FAILED at 3307. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/test_expectations.txt.rej patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/chromium/LayoutTestController.cpp patching file Tools/DumpRenderTree/chromium/LayoutTestController.h Failed to run "[u'/Projects/CommitQueue/Tools/Scripts/svn-apply', u'--reviewer', u'Kent Tamura', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/8132071
Ilya Sherman
Comment 7
2011-03-10 20:45:04 PST
Created
attachment 85434
[details]
Patch
WebKit Commit Bot
Comment 8
2011-03-11 00:12:11 PST
Comment on
attachment 85434
[details]
Patch Clearing flags on attachment: 85434 Committed
r80828
: <
http://trac.webkit.org/changeset/80828
>
WebKit Commit Bot
Comment 9
2011-03-11 00:12:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug