2011-03-11  Ilya Sherman  <isherman@chromium.org>

Reviewed by Kent Tamura.

        [Chromium] missing HTMLInputElement::setValueForUser() to tests
        https://bugs.webkit.org/show_bug.cgi?id=55854

        * platform/chromium/test_expectations.txt: Removed onchange-setvalueforuser.html
2011-03-11  Ilya Sherman  <isherman@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] missing HTMLInputElement::setValueForUser() to tests
        https://bugs.webkit.org/show_bug.cgi?id=55854

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::setValueForUser): Added.
        * DumpRenderTree/chromium/LayoutTestController.h:

Canonical link: https://commits.webkit.org/70714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80828 268f45cc-cd09-0410-ab3c-d52691b4dbfc